k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mff
  namespace: maven-fuzzy-factory
spec:
  selector:
    app: maven-fuzzy-factory
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
